--- a/public/list_of_problems.html
+++ b/public/list_of_problems.html
@@ -69,7 +69,7 @@
 		</table>
 	</div>
 	<script>
-	var socket = new WebSocket("ws://localhost:8181/ws");
+	var socket = new WebSocket("ws://localhost:8181/list_of_problems.html");
 	socket.onopen = function() {
 		console.log("Соединение установлено.");
 	};
