проклятая версия. не запускала, но, полагаю, сломаная. доделана list_of_problems для сотрудников и взаимодействие с сервером. пытаюсь запилить обновление list_of_problems при посылке изменений из task_distrib.

--- a/public/form.html
+++ b/public/form.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
- <form id="new_problem_form" method="post"> 
+ <form id="new_problem_form"> 
   <fieldset class="fieldset-auto-width">
     <legend>Форма обращения</legend>
 	<p>
