--- a/public/sign_in.html
+++ b/public/sign_in.html
@@ -57,7 +57,8 @@
 			page_name: window.location.pathname.split("/").pop(),
 			status: 'authorization',
 			login: this.elements.login.value, 
-			password: this.elements.password.value
+			password: this.elements.password.value,
+			role: 
 		}));
 		return false;
 	}
