--- a/public/list_of_problems.html
+++ b/public/list_of_problems.html
@@ -9,9 +9,8 @@
 		function reqListener(event) {
 			var message = JSON.parse(this.responseText);
 			var data = message.rows;
+			console.log(message.role);
 			var role = message.role;
-			console.log(role);
-			console.log(data);
 			var table = document.getElementById("table_data");
 			table.innerHTML='';
 
@@ -32,11 +31,35 @@
 						cell.innerHTML = data.rows[i][j];						
 					}
 				}
+				console.log(role);
+				if(role == 'employee')
+				{
+					updatePageForEmployee();
+				}
+				else if(role == 'admin')
+				{
+					createButtonToReplace("Перейти к распределению задач", "window.location.replace('task_distribution.html');");
+				}
+				else
+				{
+					createButtonToReplace("Заполнить новую форму обращения", "window.location.replace('form.html');");
+				}
 			}
-			if(role == 'employee')
+			else
 			{
-				updatePageForEmployee();
-			}
+				if(role == 'employee')
+				{
+					alert("Вам не было назначено ни одной задачи. Можете отдохнуть");
+				}
+				else if(role == 'admin')
+				{
+					alert("Новых проблем от пользователей пока не поступило. Можете отдохнуть");
+				}
+				else
+				{
+					alert("Список проблем пока пуст. Вы можете добавить новую проблему");
+				}				
+			}			
 		}
 		var oReq = new XMLHttpRequest();
 		oReq.addEventListener("load", reqListener);
@@ -46,6 +69,10 @@
 	function updatePageForEmployee()
 	{
 		var table_body = document.getElementById('table_body');
+		if(table_body == null)
+		{
+			return;
+		}
 		var trows = table_body.getElementsByTagName('tr');
 		for(var i = 0; i < trows.length; ++i)
 		{
@@ -54,6 +81,13 @@
 		}
 		var form = document.getElementById('load_changes_form');
 		form.innerHTML = '<input type="submit" value="Сохранить изменения">';
+	}
+	function createButtonToReplace(text, onclick_action) {
+		var div = document.getElementById('div_for_button');
+		var button = document.createElement("button");
+		button.appendChild(document.createTextNode(text));
+		button.setAttribute("onclick", onclick_action);
+		div.appendChild(button);
 	}
   </script>
   <style>
@@ -81,6 +115,10 @@
   </style>
 </head>
 <body onload = "queryHandbook(url);">
+	<span style="float:right">
+		<a href="/sign_in.html">Сменить пользователя</a>
+	</span>
+	<div id="div_for_button"></div>
 	<div id="table_div">
 		<table id="table_data">
 		</table>
@@ -90,58 +128,65 @@
 		</form>
 	</p>
 	<script>
-	var socket = new WebSocket("ws://localhost:8181/list_of_problems.html");
-	socket.onopen = function() {
-		console.log("Соединение установлено.");
-	};
+		var socket = new WebSocket("ws://localhost:8181/list_of_problems.html");
+		socket.onopen = function() {
+			console.log("Соединение установлено.");
+		};
 
-	socket.onclose = function(event) {
-		if (event.wasClean) {
-			console.log('Соединение закрыто чисто');
-		} else {
-			console.log('Обрыв соединения'); // например, "убит" процесс сервера
-		}
-		console.log('Код: ' + event.code + ' причина: ' + event.reason);
-	};
+		socket.onclose = function(event) {
+			if (event.wasClean) {
+				console.log('Соединение закрыто чисто');
+			} else {
+				console.log('Обрыв соединения'); // например, "убит" процесс сервера
+			}
+			console.log('Код: ' + event.code + ' причина: ' + event.reason);
+		};
 
-	socket.onmessage = function(event) {
-        console.log("Получены данные " + event.data);
-		queryHandbook(url);
-    };
-	
-	load_changes_form.onsubmit = function(){	    
-		console.log('load_changes_form event');
-		var message = {};
-		message.problem_id = [];
-		message.is_done = [];
-		message.comment = [];
-		var table_body = document.getElementById('table_body')
-		var trows = table_body.getElementsByTagName('tr');
-		for(var i = 0; i < trows.length; ++i)
-		{
-			console.log(trows[i].cells[0].innerHTML);
-			//message.problem_id.push(trows[i].cells[0].innerHTML);
-		}
+		socket.onmessage = function(event) {
+			console.log("Получены данные " + event.data);
+			queryHandbook(url);
+		};
 		
-		var chechboxesList = document.getElementsByName('checkbox');
-		var commentsList = document.getElementsByName('textarea');
-		var table_body = document.getElementById('table_body')
-		var trows = table_body.getElementsByTagName('tr');
-		for(var i = 0; i < chechboxesList.length; ++i) {
-			var checkbox = chechboxesList[i];
-			var comment = commentsList[i];
-			message.is_done.push(checkbox.checked);
-			message.comment.push(comment.value);
-			message.problem_id.push(trows[i].cells[0].innerHTML);			
+		load_changes_form.onsubmit = function(){	    
+			alert('load_changes_form event');
+			var message = {};
+			message.problem_id = [];
+			message.is_done = [];
+			message.comment = [];
+			var table_body = document.getElementById('table_body')
+			var trows = table_body.getElementsByTagName('tr');
+			for(var i = 0; i < trows.length; ++i)
+			{
+				console.log(trows[i].cells[0].innerHTML);
+				//message.problem_id.push(trows[i].cells[0].innerHTML);
+			}
+			
+			var checkboxesList = document.getElementsByName('checkbox');
+			var commentsList = document.getElementsByName('textarea');
+			var table_body = document.getElementById('table_body')
+			var trows = table_body.getElementsByTagName('tr');
+			for(var i = 0; i < checkboxesList.length; ) {
+				var checkbox = checkboxesList[i];
+				var comment = commentsList[i];
+				message.is_done.push(checkbox.checked);			
+				message.comment.push(comment.value);
+				message.problem_id.push(trows[i].cells[0].innerHTML);
+				if(checkbox.checked) 
+				{
+					table_body.removeChild(trows[i]);
+				}
+				else
+				{
+					++i;
+				}
+			}	
+			socket.send(JSON.stringify({
+				page_name: window.location.pathname.split("/").pop(),
+				status: 'list_of_problems_update',
+				data: JSON.stringify(message)
+			}));
+			return false;
 		}
-		console.log(message);		
-		socket.send(JSON.stringify({
-			page_name: window.location.pathname.split("/").pop(),
-			status: 'list_of_problems_update',
-			data: JSON.stringify(message)
-		}));
-		return false;
-	}
-  </script>
+	</script>
 </body>
 </html>
